--- a/templates/Post/all.html
+++ b/templates/Post/all.html
@@ -29,11 +29,11 @@
     <nav class="navbar navbar-default" id="navbar" style="position: relative; top: 0px;">
         <div class="container">
             <div class="navbar-header">
-                <h1 class="logo hvr-bounce-in"><a href="#" title="发帖"><img
+                <h1 class="logo hvr-bounce-in"><a href="./new" title="发帖"><img
                         src="/static/public/img/add.png" alt="发帖"></a></h1>
             </div>
             <ul class="nav navbar-nav navbar-right" style="background-color: #ffffff6b;">
-                <li><a title="我的" style="height: 50px" href="https://www.baidu.com/">我的</a></li>
+                <li><a style="height: 50px" href="../user/set">{{ info.uname }}</a></li>
             </ul>
         </div>
     </nav>
