--- a/templates/User/check.html
+++ b/templates/User/check.html
@@ -30,7 +30,7 @@
                         <div class="login-center-input-text">密码</div>
                     </div>
                 </div>
-                <div class="login-center clearfix">
+                <div class="login-center clearfix" style="margin-bottom: 10px">
                     <div class="login-center-img">
                         <img src="/static/User/img/check.jpg">
                     </div>
@@ -39,11 +39,11 @@
                         <div class="login-center-input-text">验证码</div>
                     </div>
                     <img style="width: 100px;text-align: center;height: 40px;margin-top: 10px;" src= "data:image/jpeg;base64,{{ image.img }}"  >
-                    <input class="login-button" style="margin-top: 10px" type="submit" value="认证" >
                 </div>
+                <input class="login-button"  type="submit" value="认证" >
             </form>
 		</div>
-		<div class="sk-rotating-plane"></div>
+
 </div>
 
 <!-- scripts -->
