--- a/templates/Post/new.html
+++ b/templates/Post/new.html
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta charset="utf-8" />
+    <meta name="renderer" content="webkit" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>发布</title>
+    <link rel="stylesheet" type="text/css" href="/static/public/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/public/css/nprogress.css">
+    <link rel="stylesheet" type="text/css" href="/static/public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/public/css/font-awesome.min.css">
+    <script src="/static/public/js/jquery-2.1.4.min.js"></script>
+    <script src="/static/public/js/nprogress.js"></script>
+    <script src="/static/public/js/jquery.lazyload.min.js"></script>
+    <!--[if gte IE 9]>
+    <script src="js/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <script src="js/html5shiv.min.js" type="text/javascript"></script>
+    <script src="js/respond.min.js" type="text/javascript"></script>
+    <script src="js/selectivizr-min.js" type="text/javascript"></script>
+    <![endif]-->
+    <!--[if lt IE 9]>
+    <script>window.location.href = 'upgrade-browser.html';</script>
+    <![endif]-->
 </head>
-<body>
-$END$
+<body class="user-select single" style="background-image: url(/static/public/img/bg.jpg); background-size:cover ; background-attachment: fixed;">
+<header class="header">
+    <nav class="navbar navbar-default" id="navbar" style="position: relative; top: 0px;">
+        <div class="container">
+            <div class="navbar-header">
+                <h1 class="logo hvr-bounce-in"><a href="../" title="主页"><img src="/static/public/img/QQ.png" alt="主页" /></a></h1>
+            </div>
+            <ul class="nav navbar-nav navbar-right" style="background-color: #ffffff6b;">
+                <li><a style="height: 50px" href="/user/set">{{ info.uname }}</a></li>
+            </ul>
+        </div>
+    </nav>
+</header>
+<section class="container">
+    <div class="content-wrap">
+        <div class="content" style="min-height: 400px">
+            <div class="title" id="comment">
+                <h3>请填写标题和内容</h3>
+            </div>
+            <form id="comment-form" name="comment-form" action="" method="POST">
+                <div class="comment" style="margin-top: 20px">
+                    <div class="comment-box" style="margin-bottom: 15px">
+                        <textarea placeholder="请输入标题" name="head" id="comment-textarea" cols="100%" rows="3" tabindex="3" style="height: 30px"></textarea>
+                    </div>
+                </div>
+                <div class="comment">
+                    <div class="comment-box">
+                        <textarea placeholder="请输入内容" name="content" id="comment-textarea" cols="100%" rows="3" tabindex="3"></textarea>
+                    </div>
+                    <button type="submit" id="comment-submit" tabindex="4" style="right: 40px;bottom: 25px">发布 </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</section>
+<footer class="footer">
+    <div class="container">
+        <p>川大小Q社区 <a href="https://github.com/JifeiTune" target="_blank">JifeiTune</a> </p>
+    </div>
+    <div id="gotop" style="display: none;">
+        <a class="gotop"></a>
+    </div>
+</footer>
+<script src="/static/public/js/bootstrap.min.js"></script>
+<script src="/static/public/js/jquery.ias.js"></script>
+<script src="/static/public/js/scripts.js"></script>
 </body>
 </html>
