--- a/templates/User/login.html
+++ b/templates/User/login.html
@@ -28,11 +28,18 @@
                         <input type="password" name="password" value="" placeholder="请输入您的密码" onfocus="this.placeholder=''" onblur="this.placeholder='请输入您的密码'"/>
                         <div class="login-center-input-text">密码</div>
                     </div>
-                    <input class="login-button" type="submit" value="登录" >
                 </div>
+                <input class="login-button" type="submit" value="登录" >
             </form>
+            <div class="other">
+                <a class="register" href="../register" style="float: left">
+                    注册
+                </a>
+                <a class="forget" href="../forget" style="float: right">
+                    忘记密码
+                </a>
+            </div>
 		</div>
-		<div class="sk-rotating-plane"></div>
 </div>
 
 <!-- scripts -->
