--- a/templates/User/resister.html
+++ b/templates/User/resister.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+  <meta charset="utf-8">
+  <title>注册</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" media="screen" href="/static/User/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/static/User/css/reset.css"/>
 </head>
 <body>
-$END$
+
+<div id="particles-js" style="background-image: url(/static/public/img/bg.jpg);">
+		<div class="login">
+			<div class="login-top">
+				注册
+			</div>
+            <form action="/user/register/" method="post">
+                <div class="login-center clearfix">
+                    <div class="login-center-img"><img src="/static/User/img/name.png"/></div>
+                    <div class="login-center-input">
+                        <input type="text" name="uname" value="" placeholder="请输入用户名" onfocus="this.placeholder=''" onblur="this.placeholder='请输入用户名'"/>
+                        <div class="login-center-input-text">用户名</div>
+                    </div>
+                </div>
+                <div class="login-center clearfix">
+                    <div class="login-center-img"><img src="/static/User/img/password.png"/></div>
+                    <div class="login-center-input">
+                        <input type="password" name="password1" value="" placeholder="请输入密码" onfocus="this.placeholder=''" onblur="this.placeholder='请输入密码'"/>
+                        <div class="login-center-input-text">密码</div>
+                    </div>
+                </div>
+                <div class="login-center clearfix">
+                    <div class="login-center-img"><img src="/static/User/img/password.png"/></div>
+                    <div class="login-center-input">
+                        <input type="password" name="password2" value="" placeholder="请确认密码" onfocus="this.placeholder=''" onblur="this.placeholder='请确认密码'"/>
+                        <div class="login-center-input-text">密码</div>
+                    </div>
+                </div>
+                <input class="login-button" type="submit" value="注册" >
+            </form>
+		</div>
+</div>
+
+<!-- scripts -->
+<script src="/static/User/js/particles.min.js"></script>
+<script src="/static/User/js/app.js"></script>
 </body>
 </html>
