--- a/static/public/css/style.css
+++ b/static/public/css/style.css
@@ -596,8 +596,6 @@ body,input,button,textarea,select {
     background-color: rgba(253, 255, 255, 0.5);
     border-radius: 5px;
     margin: 15px 0px 15px 0px;
-    max-height: 240px;
-
     box-sizing: border-box;
     box-shadow: 0 0 0 1px hsla(240,0%,100%,.3) inset,
     0 .5em 1em rgba(0, 0, 0, 0.6);
@@ -768,6 +766,8 @@ body,input,button,textarea,select {
 }
 
 .excerpt .note {
+    max-height: 240px;
+    overflow: hidden;
     font-size: 14px;
     color: #470064;
     word-wrap: break-word;
@@ -953,6 +953,7 @@ body,input,button,textarea,select {
     text-indent: 30px;
     margin-bottom: 18px;
     word-wrap: break-word;
+    white-space: pre-line;
 }
 
 .article-content pre {
