合并修改密码和找回密码逻辑，统一使用QQ机器人发送的验证码进行身份验证后设置新密码

--- a/templates/User/login.html
+++ b/templates/User/login.html
@@ -35,7 +35,7 @@
                 <a class="register" href="../register" style="float: left">
                     注册
                 </a>
-                <a class="forget" href="../forget" style="float: right">
+                <a class="forget" href="../reset" style="float: right">
                     忘记密码
                 </a>
             </div>
