--- a/templates/User/reset.html
+++ b/templates/User/reset.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="utf-8">
+  <title>修改密码</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" media="screen" href="/static/User/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/static/User/css/reset.css"/>
 </head>
 <body>
+<div id="particles-js" style="background-image: url(/static/public/img/bg.jpg);">
+		<div class="login">
+			<div class="login-top">
+				修改密码
+			</div>
+            <form action="" method="post">
+                <div class="login-center clearfix">
+                    <div class="login-center-img">
+                        <img src="/static/User/img/password.png"/>
+                    </div>
+                    <div class="login-center-input">
+                        <input type="password" name="password1" value="" placeholder="请输入新密码" onfocus="this.placeholder=''" onblur="this.placeholder='请输入新密码'"/>
+                        <div class="login-center-input-text">密码</div>
+                    </div>
+                </div>
+                <div class="login-center clearfix">
+                    <div class="login-center-img"><img src="/static/User/img/password.png"/></div>
+                    <div class="login-center-input">
+                        <input type="password" name="password2" value="" placeholder="请确认新密码" onfocus="this.placeholder=''" onblur="this.placeholder='请确认新密码'"/>
+                        <div class="login-center-input-text">密码</div>
+                    </div>
+                </div>
+                <div class="login-center clearfix" style="margin-bottom: 10px">
+                    <div class="login-center-img">
+                        <img src="/static/User/img/check.jpg">
+                    </div>
+                    <div class="login-center-input">
+                        <input type="text" name="check" value="" placeholder="请输入小Q发送给你的验证码" onfocus="this.placeholder=''" onblur="this.placeholder='请输入小Q发送给你的验证码'"/>
+                        <div class="login-center-input-text">验证码</div>
+                    </div>
+                </div>
+                <input class="login-button"  type="submit" value="修改密码" >
+            </form>
+		</div>
 
+</div>
+
+<!-- scripts -->
+<script src="/static/User/js/particles.min.js"></script>
+<script src="/static/User/js/app.js"></script>
 </body>
 </html>
